--- a/2-express-tutorial/public/index.html
+++ b/2-express-tutorial/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="index.css" href="index.css">
 </head>
 <body>
     <h1>Home Page</h1>
